FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

set_property(SOURCE cppephem.i PROPERTY CPLUSPLUS ON)
set_property(SOURCE cppephem.i PROPERTY SWIG_FLAGS "-includeall")

SWIG_ADD_LIBRARY(cppephem
                 LANGUAGE python 
                 SOURCES  cppephem.i)

SWIG_LINK_LIBRARIES(cppephem cppephem ${PYTHON_LIBRARIES})
